change alignment of table

--- a/climbing.html
+++ b/climbing.html
@@ -60,7 +60,7 @@
 <body ng-controller="controller">
 	<h1 align="center">Mt. Palace Bouldering League</h1>
 	<form>
-		<table class="mdl-data-table mdl-js-data-table" align="center">
+		<table class="mdl-data-table mdl-js-data-table">
 			<thead>
 				<tr>
 					<th class="mdl-data-table__cell--non-numeric">Route</th>
