make table full width

--- a/climbing.html
+++ b/climbing.html
@@ -70,7 +70,7 @@
 		<table class="mdl-data-table mdl-js-data-table full-width" align="center">
 			<thead>
 				<tr>
-					<th class="mdl-data-table__cell--non-numeric">Route</th>
+					<th class="mdl-data-table__cell--non-numeric" full-width>Route</th>
 					<th class="mdl-data-table__cell--non-numeric">Tries</th>
 					<th class="mdl-data-table__cell--non-numeric">+Holds</th>
 					<th class="mdl-data-table__cell--non-numeric">Points</th>
