--- a/climbing.html
+++ b/climbing.html
@@ -3,9 +3,8 @@
 	<title>Mt. Palace Bouldering League</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
 	angular.module('app', ['ngStorage'])
 		.controller('controller', function($scope, $localStorage, $sessionStorage) {
@@ -57,32 +56,39 @@
 		});
 </script>
 
-<style>
-.full-width {
-    width: 100%;
-}
-</style>
-
 </head>
 <body ng-controller="controller">
 	<h1 align="center">Mt. Palace Bouldering League</h1>
 	<form>
-		<table class="mdl-data-table mdl-js-data-table full-width" align="center">
+		<table class="centered">
 			<thead>
 				<tr>
-					<th class="mdl-data-table__cell--non-numeric" full-width>Route</th>
-					<th class="mdl-data-table__cell--non-numeric">Tries</th>
-					<th class="mdl-data-table__cell--non-numeric">+Holds</th>
-					<th class="mdl-data-table__cell--non-numeric">Points</th>
+					<th>Route</th>
+					<th>Tries</th>
+					<th>+Holds</th>
+					<th>Points</th>
 				</tr>
 			</thead>
 
 			<tbody>
 	   			<tr ng-repeat="n in climbs() track by $index">
 	   				<td>{{$index+1}}</td>
-	   				<td class="mdl-data-table__cell--non-numeric"><input class="mdl-textfield__input" type="text" ng-model="form[$index].column1" ng-change="compute($index)"></td>
-	   				<td class="mdl-data-table__cell--non-numeric"><input class="mdl-textfield__input" type="text" ng-model="form[$index].column2" ng-change="compute($index)"></td>
-	   				<td class="mdl-data-table__cell--non-numeric"><input class="mdl-textfield__input" type="text" readonly ng-model="form[$index].total"></td>
+	   				<td>
+	   					<div class="input-field">
+	   						<input type="text" ng-model="form[$index].column1" ng-change="compute($index)">
+	   					</div>
+	   				</td>
+
+	   				<td>
+	   					<div class="input-field">
+	   						<input type="text" ng-model="form[$index].column2" ng-change="compute($index)">
+	   					</div>
+	   				</td>
+	   				<td>
+	   					<div class="input-field">
+	   						<input type="text" readonly ng-model="form[$index].total"></td>
+	   					</div>
+	   				</td>
 	   			</tr>
 	   		</tbody>
 	   		<thead>
