make static numbers bigger

--- a/climbing.html
+++ b/climbing.html
@@ -95,8 +95,8 @@
 	   			<tr>
 	   				<th></th>
 	   				<th></th>
-	   				<th>Score:</th>
-					<th>{{total}}</th>
+	   				<th><h2>Score:</h2></th>
+					<th><h2>{{total}}</h2></th>
 	   			</tr>
 	   		</thead>
 		</table>
