--- a/climbing.html
+++ b/climbing.html
@@ -100,7 +100,9 @@
    		</div>
     </nav>
 	<form>
-		<table class="centered">
+		<div class="row">
+		<div class="grid-example col s12">
+		<table>
 			<thead>
 				<tr>
 					<th>Route</th>
@@ -128,13 +130,15 @@
 	   			</tr>
 	   		</tbody>
 		</table>
+		</div>
+		</div>
 	</form>
 </body>
 <footer class="page-footer teal lighten-2">
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
-				<h5 class="white-text right">Score: {{total}}</h5>
+				<h5 class="white-text right">Total Score: {{total}}</h5>
 			</div>
 		</div>
 	</div>
