--- a/climbing.html
+++ b/climbing.html
@@ -100,33 +100,31 @@
    		</div>
     </nav>
 	<form>
-		<div class="row">
-		<div class="grid-example col s12">
 		<table>
 			<thead>
 				<tr>
-					<th><div class="col s2">Route</div></th>
-					<th><div class="col s5">Attempts</div></th>
-					<th><div class="col s5">+Holds</div></th>
-					<th><div class="col s2">Points</div></th>
+					<th style="width:10%">Route</th>
+					<th style="width:40%">Attempts</th>
+					<th style="width:40%">+Holds</th>
+					<th style="width:10%">Points</th>
 				</tr>
 			</thead>
 
 			<tbody>
 	   			<tr ng-repeat="n in climbs() track by $index">
-	   				<td><div class="col s2"><h2>{{$index+1}}</h2></div></td>
-	   				<td><div class="col s5" ng-init="form[$index].column1 ? form[$index].column1 : form[$index].column1=0">
+	   				<td style="width:10%"><h2>{{$index+1}}</h2></td>
+	   				<td style="width:40%"><div ng-init="form[$index].column1 ? form[$index].column1 : form[$index].column1=0">
 	   					<div><h4>{{form[$index].column1}}</h4></div>
 	   					<div><a class="btn-floating btn-large waves-effect waves-light" ng-click="addTry($index)"><i class="material-icons">add</i></a>
 	   					<a class="btn-floating btn-large waves-effect waves-light" ng-click="removeTry($index)"><i class="material-icons">remove</i></a></div></div>
 	   				</td>
 
-	   				<td><div class="col s5" ng-init="form[$index].column2 ? form[$index].column2 : form[$index].column2=0">
+	   				<td style="width:40%"><div ng-init="form[$index].column2 ? form[$index].column2 : form[$index].column2=0">
 	   					<div><h4>{{form[$index].column2}}</h4></div>
 	   					<div><a class="btn-floating btn-large waves-effect waves-light" ng-click="addHold($index)"><i class="material-icons">add</i></a>
 	   					<a class="btn-floating btn-large waves-effect waves-light" ng-click="removeHold($index)"><i class="material-icons">remove</i></a></div></div>
 	   				</td>
-	   				<td><div class="col s2"><h4>{{form[$index].total}}</h4></div></td>
+	   				<td style="width:10%"><h4>{{form[$index].total}}</h4></td>
 	   			</tr>
 	   		</tbody>
 		</table>
