--- a/climbing.html
+++ b/climbing.html
@@ -100,31 +100,31 @@
    		</div>
     </nav>
 	<form>
-		<table>
+		<table class="centered">
 			<thead>
 				<tr>
-					<th style="width:10%">Route</th>
-					<th style="width:40%">Attempts</th>
-					<th style="width:40%">+Holds</th>
-					<th style="width:10%">Points</th>
+					<th>Route</th>
+					<th>Attempts</th>
+					<th>+Holds</th>
+					<th>Points</th>
 				</tr>
 			</thead>
 
 			<tbody>
 	   			<tr ng-repeat="n in climbs() track by $index">
-	   				<td style="width:10%"><h2>{{$index+1}}</h2></td>
-	   				<td style="width:40%"><div ng-init="form[$index].column1 ? form[$index].column1 : form[$index].column1=0">
-	   					<div><h4>{{form[$index].column1}}</h4></div>
+	   				<td><h2>{{$index+1}}</h2></div></td>
+	   				<td>
+	   					<div ng-init="form[$index].column1 ? form[$index].column1 : form[$index].column1=0"><h4>{{form[$index].column1}}</h4></div>
 	   					<div><a class="btn-floating btn-large waves-effect waves-light" ng-click="addTry($index)"><i class="material-icons">add</i></a>
-	   					<a class="btn-floating btn-large waves-effect waves-light" ng-click="removeTry($index)"><i class="material-icons">remove</i></a></div></div>
+	   					<a class="btn-floating btn-large waves-effect waves-light" ng-click="removeTry($index)"><i class="material-icons">remove</i></a></div>
 	   				</td>
 
-	   				<td style="width:40%"><div ng-init="form[$index].column2 ? form[$index].column2 : form[$index].column2=0">
-	   					<div><h4>{{form[$index].column2}}</h4></div>
+	   				<td>
+	   					<div ng-init="form[$index].column2 ? form[$index].column2 : form[$index].column2=0"><h4>{{form[$index].column2}}</h4></div>
 	   					<div><a class="btn-floating btn-large waves-effect waves-light" ng-click="addHold($index)"><i class="material-icons">add</i></a>
-	   					<a class="btn-floating btn-large waves-effect waves-light" ng-click="removeHold($index)"><i class="material-icons">remove</i></a></div></div>
+	   					<a class="btn-floating btn-large waves-effect waves-light" ng-click="removeHold($index)"><i class="material-icons">remove</i></a></div>
 	   				</td>
-	   				<td style="width:10%"><h4>{{form[$index].total}}</h4></td>
+	   				<td><h4>{{form[$index].total}}</h4></td>
 	   			</tr>
 	   		</tbody>
 		</table>
