tweak table headers

--- a/climbing.html
+++ b/climbing.html
@@ -103,10 +103,10 @@
 		<table class="centered">
 			<thead>
 				<tr>
-					<th>Route</th>
-					<th>Attempts</th>
-					<th>+Holds</th>
-					<th>Points</th>
+					<th><h4>Route</h4></th>
+					<th><h4>Attempts</h4></th>
+					<th><h4>+Holds</h4></th>
+					<th><h4>Points</h4></th>
 				</tr>
 			</thead>
 
