--- a/climbing.html
+++ b/climbing.html
@@ -94,9 +94,9 @@
 
 </head>
 <body ng-controller="controller">
-   	<nav>
-   		<div class="nav-wrapper teal lighten-2">
-     		<a href="#" class="brand-logo">Bouldering League</a>
+   	<nav class="nav-extended teal lighten-2">
+   		<div class="nav-wrapper">
+     		<p><h1>Bouldering League</h1></a>
    		</div>
     </nav>
 	<form>
