--- a/climbing.html
+++ b/climbing.html
@@ -103,10 +103,10 @@
 		<table class="centered">
 			<thead>
 				<tr>
-					<th><h4>Route</h4></th>
-					<th><h4>Attempts</h4></th>
-					<th><h4>+Holds</h4></th>
-					<th><h4>Points</h4></th>
+					<th><h4><strong>Route</strong></h4></th>
+					<th><h4><strong>Attempts</strong></h4></th>
+					<th><h4><strong>+Holds</strong></h4></th>
+					<th><h4><strong>Points</strong></h4></th>
 				</tr>
 			</thead>
 
@@ -114,18 +114,18 @@
 	   			<tr ng-repeat="n in climbs() track by $index">
 	   				<td><h2>{{$index+1}}</h2></div></td>
 	   				<td>
-	   					<div ng-init="form[$index].column1 ? form[$index].column1 : form[$index].column1=0"><h4>{{form[$index].column1}}</h4>
-	   					<a class="btn-floating btn-large" ng-click="addTry($index)"><i class="material-icons">add</i></a>
+	   					<div ng-init="form[$index].column1 ? form[$index].column1 : form[$index].column1=0"><h3>{{form[$index].column1}}</h3>
+	   					<a class="btn-floating btn-large" ng-click="addTry($index)"><i class="material-icons">add</i>   </a>
 	   					<a class="btn-floating btn-large" ng-click="removeTry($index)"><i class="material-icons">remove</i></a></div>
 	   				</td>
 
 	   				<td>
-	   					<div ng-init="form[$index].column2 ? form[$index].column2 : form[$index].column2=0"><h4>{{form[$index].column2}}</h4>
+	   					<div ng-init="form[$index].column2 ? form[$index].column2 : form[$index].column2=0"><h3>{{form[$index].column2}}</h3>
 	   					<a class="btn-floating btn-large" ng-click="addHold($index)"><i class="material-icons">add</i></a>
 	   					<a class="btn-floating btn-large" ng-click="removeHold($index)"><i class="material-icons">remove</i></a></div>
 	   				</td>
 	   				<td> 
-	   					<h4>{{form[$index].total}}</h4></div>
+	   					<h3>{{form[$index].total}}</h3></div>
 	   				</td>
 	   			</tr>
 	   		</tbody>
@@ -137,9 +137,7 @@
 <footer class="page-footer teal lighten-2">
 	<div class="container">
 		<div class="row">
-			<div class="col l6 s12">
-				<h1 class="white-text right">Total Score: {{total}}</h1>
-			</div>
+			<h1 class="white-text right">Total Score: {{total}}</h1>
 		</div>
 	</div>
 </footer>
